# InvoiceInsight

./: .gitignore  .replit  INTEGRATION_GUIDE.md  OAUTH_SETUP_GUIDE.md  PROJECT_STATUS.md  README.md  STREAMLIT_MIGRATION.md  app.py  main.py  pyproject.toml  replit.md  requirements.txt
archive/pyqt5_gui/gui/: data_editor.py  image_viewer.py  main_window.py  photo_selector.py  roi_selector.py
config/: settings.yaml
src/: __init__.py  user_settings.py
src/api/: __init__.py  google_photos.py  google_sheets.py
src/auth/: firebase_auth.py  google_auth.py
src/cache/: __init__.py  image_cache.py
src/export/: excel_exporter.py
src/gui/: main_window.py  photo_selector.py
src/ocr/: __init__.py  tesseract_ocr.py  vision_ocr.py
src/processing/: __init__.py  custom_ledger_parser.py  custom_ledger_parser_v2.py  data_extractor.py  general_ledger_parser.py  ocr_fusion.py  ocr_orchestrator.py  processed_tracker.py  reparser.py  validator.py
src/utils/: config.py  logger.py
static/: login.html
templates/: google_test.html  index.html  login.html  settings.html
