[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "diskcache>=5.6.3",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-vision>=3.10.2",
    "keyring>=25.6.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "persist-queue>=1.0.0",
    "pillow>=12.0.0",
    "pyqt5>=5.15.9",
    "pyqt5-tools>=5.15.9.3.3",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "spacy>=3.8.7",
    "streamlit>=1.19.0",
    "streamlit-drawable-canvas>=0.9.3",
    "tenacity>=9.1.2",
    "urllib3>=2.5.0",
]
